fixed issue with mathJax not loading at correct font-size in collapsed divs using workaround. Not very elegant but functions well enough

--- a/Amol Vue Content Test v4/styles/index_Style.css
+++ b/Amol Vue Content Test v4/styles/index_Style.css
@@ -8,6 +8,11 @@
 .mathJaxDisplay {
     display:table;
     margin: 10px auto;
+    font-size: calc(4px + 0.95vw);
+}
+
+.mathJaxInline {
+    font-size: calc(4px + 0.95vw);
 }
 
 .vis-container {
